--- a/header.css
+++ b/header.css
@@ -5,11 +5,13 @@ body {
 .header {
   display: flex;
   flex: 1;
-  margin: 0px 0px 0px 89px;
   position: fixed;
   top: 0px;
   gap: 385px;
   z-index: 1;
+  background-color: white;
+  width: 100%;
+  height: 120px;
 }
 
 .nav-bar {
@@ -22,10 +24,12 @@ body {
   font-weight: 500;
   font-size: 14px;
   line-height: 16.94px;
+  padding-right: 151px;
 }
 
 .logo > img {
   width: 187px;
+  padding-left: 89px;
 }
 
 .nav-bar > div > img {
