--- a/landing-page.css
+++ b/landing-page.css
@@ -3,12 +3,9 @@
   height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 202px 0px 0px 115px;
+  padding: 202px 0px 161px 115px;
   display: flex;
-}
-
-.landing-page-leftside {
-  flex: 1;
+  position: relative;
 }
 
 .tower-section {
@@ -20,13 +17,12 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  /* justify-content: center;
-  align-items: center; */
+  justify-content: center;
   bottom: 354px;
   left: -53px;
   background-color: #b8cbd16e;
   border-radius: 0px 52px 0px 0px;
-  width: 183px;
+  width: 171px;
   height: 202px;
   padding-left: 24px;
 }
@@ -56,4 +52,74 @@
   font-weight: 500;
   font-size: 19px;
   line-height: 22.99px;
+}
+
+.profile {
+  display: flex;
+  padding: 20px 0px 0px 60px;
+}
+
+.profile-pic > img {
+  width: 90px;
+}
+
+.profile-description {
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24.2px;
+  padding: 22px 0px 0px 20px;
+}
+
+.grey-text {
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16.94px;
+  color: #a8a8a8;
+}
+
+.landing-page-rightside {
+  display: flex;
+  flex-direction: column;
+  padding: 52px 0px 0px 92px;
+}
+
+.landing-page-rightside-description {
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 70px;
+  line-height: 75px;
+  padding-bottom: 38px;
+}
+
+.rightside-greytext {
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24.2px;
+  color: #9e9a9a;
+  padding-bottom: 14px;
+}
+
+.rightside-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #444444;
+  border-radius: 5px;
+  width: 230px;
+  height: 65px;
+  box-shadow: 0px 4px 4px 0px #00000040;
+  background-color: #444444;
+  gap: 16px;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24.2px;
+  color: #ffffff;
+}
+
+.rightside-button > img {
+  width: 24px;
 }
