--- a/parent-box.css
+++ b/parent-box.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #ffffff;
   border-radius: 5px 0px 0px 0px;
   background-color: #ffffff;
   width: 281px;
@@ -15,6 +14,7 @@
 
 .button-tool > div:hover {
   background-color: #d3d3d3;
+  cursor: pointer;
 }
 
 .button-tool > div {
@@ -27,6 +27,7 @@
 
 .button-tool > .active {
   background-color: #d3d3d3;
+  border-radius: 5px 0px 0px 0px;
 }
 
 .info-tool {
