--- a/landing-page.css
+++ b/landing-page.css
@@ -13,7 +13,7 @@
   margin: 0px 0px 0px 60px;
 }
 
-.absolute-box {
+.absolute-tower-box {
   position: absolute;
   display: flex;
   flex-direction: column;
