--- a/parent-box.css
+++ b/parent-box.css
@@ -35,6 +35,7 @@
   justify-content: space-between;
   align-items: center;
   border: 1px solid #ffffff;
+  border-radius: 0px 10px 10px 10px;
   width: 1073px;
   height: 161px;
   background-color: #ffffff;
