--- a/page3.css
+++ b/page3.css
@@ -1,6 +1,6 @@
 .page3 {
   background-image: url(images/page3-background.png);
-  height: 100%;
+  height: 800px;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
